# cxx-qt-io

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  scaffold-shared.sh  test.sh  valgrind_suppressions.txt
.github/workflows/: github-cxx-qt-io-tests.yml
cmake/: CompilerCaching.cmake
include/: assertion_utils.h  common.h  util.h  views.h
include/core/: qbuffer.h  qbytearray.h  qcryptographichash.h  qdeadlinetimer.h  qdir.h  qeventloop.h  qfile.h  qfiledevice.h  qiodevice.h  qmultimap.h  qobject.h  qpair.h  qsavefile.h  qstandardpaths.h  qtemporaryfile.h
include/core/qhash/: qhash.h  qhash_i32_qvariant.h  qhash_private.h
include/core/qlist/: qlist.h  qlist_private.h  qlist_qdeadlinetimer.h  qlist_qdtlsgeneratorparameters.h  qlist_qhostaddress.h  qlist_qhstspolicy.h  qlist_qhttp1configuration.h  qlist_qhttp2configuration.h  qlist_qhttpheaders.h  qlist_qhttpheadersentry.h  qlist_qhttppart.h  qlist_qnetworkaddressentry.h  qlist_qnetworkcachemetadata.h  qlist_qnetworkcookie.h  qlist_qnetworkdatagram.h  qlist_qnetworkinterface.h  qlist_qnetworkproxy.h  qlist_qnetworkrequest.h  qlist_qocspresponse.h  qlist_qpair.h  qlist_qpair_qbytearray_qbytearray.h  qlist_qsslcertificate.h  qlist_qsslcertificateextension.h  qlist_qsslcipher.h  qlist_qsslconfiguration.h  qlist_qssldiffiehellmanparameters.h  qlist_qsslellipticcurve.h  qlist_qsslerror.h  qlist_qsslkey.h  qlist_qsslpresharedkeyauthenticator.h
include/core/qmap/: qmap.h  qmap_private.h  qmap_qbytearray_qvariant.h
include/core/qpair/: qpair.h  qpair_private.h  qpair_qbytearray_qbytearray.h  qpair_qhostaddress_i32.h
include/core/qset/: qset.h  qset_private.h  qset_qhostaddress.h  qset_qhttp1configuration.h  qset_qocspresponse.h  qset_qsslcertificate.h  qset_qssldiffiehellmanparameters.h  qset_qsslerror.h  (+1 more)
include/network/: qabstractnetworkcache.h  qabstractsocket.h  qauthenticator.h  qdtls.h  qdtlsclientverifier.h  qdtlsgeneratorparameters.h  qhostaddress.h  qhstspolicy.h  qhttp1configuration.h  qhttp2configuration.h  qhttpheaders.h  qhttpmultipart.h  qhttppart.h  qlocalsocket.h  qnetworkaccessmanager.h  qnetworkaddressentry.h  qnetworkcachemetadata.h  qnetworkcookie.h  qnetworkcookiejar.h  qnetworkdatagram.h  qnetworkdiskcache.h  qnetworkinterface.h  qnetworkproxy.h  qnetworkreply.h  qnetworkrequest.h  qocspresponse.h  qssl.h  qsslcertificate.h  qsslcertificateextension.h  qsslcipher.h  qsslconfiguration.h  qssldiffiehellmanparameters.h  qsslellipticcurve.h  qsslerror.h  qsslkey.h  qsslpresharedkeyauthenticator.h  qsslserver.h  qsslsocket.h  qtcpserver.h  qtcpsocket.h  (+1 more)
scripts/: docs.sh  pre-commit.sh  scaffold-shared.sh
src/: adapter.rs  lib.rs  macros.rs  qio.rs  util.rs
src/core/: file_descriptor.rs  mod.rs  qbuffer.cpp  qbuffer.rs  qbytearray.cpp  qcryptographichash.rs  qdeadlinetimer.cpp  qdeadlinetimer.rs  qdir.rs  qeventloop.rs  qfile.rs  qfiledevice.rs  qiodevice.cpp  qiodevice.rs  qobject.cpp  qobject.rs  qpair.cpp  qpair.rs  qsavefile.rs  qt.rs  qtemporaryfile.cpp  qtemporaryfile.rs
src/fs/: file_descriptor.rs  mod.rs  qdir.cpp  qdir.rs  qfile.rs  qfiledevice.rs  qsavefile.rs  qtemporaryfile.rs
src/net/: mod.rs  qabstractsocket.rs  qauthenticator.rs  qhostaddress.cpp  qhostaddress.rs  qhttpheaders.cpp  qhttpheaders.rs  qlocalsocket.rs  qnetworkaddressentry.cpp  qnetworkaddressentry.rs  qnetworkdatagram.rs  qnetworkinterface.cpp  qnetworkinterface.rs  qnetworkproxy.rs  qnetworkrequestknownheaders.rs  qsocketaddr.rs  qtcpserver.rs  qtcpsocket.rs  qudpsocket.rs  raw_header_list.rs  socket_descriptor.rs
src/network/: mod.rs  qabstractnetworkcache.cpp  qabstractnetworkcache.rs  qabstractsocket.rs  qauthenticator.rs  qhostaddress.cpp  qhostaddress.rs  qhttp1configuration.rs  qhttp2configuration.cpp  qhttp2configuration.rs  qhttpheaders.cpp  qhttpheaders.rs  qhttpmultipart.rs  qhttppart.cpp  qhttppart.rs  qlocalsocket.rs  qnetworkaccessmanager.cpp  qnetworkaccessmanager.rs  qnetworkaddressentry.cpp  qnetworkaddressentry.rs  qnetworkcachemetadata.rs  qnetworkcookie.cpp  qnetworkcookie.rs  qnetworkcookiejar.rs  qnetworkdatagram.cpp  qnetworkdatagram.rs  qnetworkdiskcache.rs  qnetworkinterface.cpp  qnetworkinterface.rs  qnetworkproxy.cpp  qnetworkproxy.rs  qnetworkreply.rs  qnetworkrequest.rs  qocspresponse.rs  qsocketaddr.rs  qsslcertificate.cpp  qsslcertificate.rs  qsslcertificateextension.cpp  qsslcertificateextension.rs  qsslcipher.cpp  (+20 more)
src/request/: mod.rs  qabstractnetworkcache.cpp  qabstractnetworkcache.rs  qhstspolicy.cpp  qhstspolicy.rs  qhttp1configuration.cpp  qhttp1configuration.rs  qhttp2configuration.cpp  qhttp2configuration.rs  qhttpmultipart.rs  qhttppart.cpp  qhttppart.rs  qnetworkaccessmanager.cpp  qnetworkaccessmanager.rs  qnetworkcachemetadata.cpp  qnetworkcachemetadata.rs  qnetworkcookie.cpp  qnetworkcookie.rs  qnetworkcookiejar.rs  qnetworkdiskcache.rs  qnetworkreply.rs
src/ssl/: mod.rs  qcryptographichash.rs  qdtls.rs  qdtlsclientverifier.rs  qdtlsgeneratorparameters.rs  qocspresponse.cpp  qocspresponse.rs  qsslcertificate.cpp  qsslcertificate.rs  qsslcertificateextension.cpp  qsslcertificateextension.rs  qsslcipher.rs  qsslconfiguration.cpp  qsslconfiguration.rs  qssldiffiehellmanparameters.cpp  qssldiffiehellmanparameters.rs  qsslellipticcurve.cpp  qsslellipticcurve.rs  qsslerror.cpp  qsslerror.rs  qsslkey.cpp  qsslkey.rs  qsslpresharedkeyauthenticator.rs  qsslserver.rs  qsslsocket.rs
test-utils/: Cargo.toml  build.rs  test_utils.h
test-utils/src/: lib.rs  run_inside_app.rs  test_context.rs  test_utils.cpp
tests/: CMakeLists.txt  local.crt  local.key  qeventloop-exec-with.rs  ssl-server-and-socket.rs  tcp-server-and-socket.rs
tests/common/: connect_errors.rs  ensure_app_is_running.rs  mod.rs  run_inside_app.rs
tests/standalone/: CMakeLists.txt
tests/standalone/cpp/: main.cpp  qbuffer.h  qdeadlinetimer.h  qdtlsgeneratorparameters.h  qfile.h  qsslconfiguration.h
tests/standalone/rust/: Cargo.toml  build.rs
tests/standalone/rust/src/: lib.rs  qbuffer.rs  qdeadlinetimer.rs  qdtlsgeneratorparameters.rs  qfile.rs  qsslconfiguration.rs
(+150 files in other folders)
