[package]
name = "cxx-qt-io"
version = "0.2.0"
edition = "2024"
links = "cxx-qt-io"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cxx = "1.0.192"
cxx-qt = { git = "https://github.com/jnbooth/cxx-qt", rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905" }
cxx-qt-lib = { git = "https://github.com/jnbooth/cxx-qt", rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905" }

[build-dependencies]
cxx-qt-build = { git = "https://github.com/jnbooth/cxx-qt", rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905" }
qt-build-utils = { git = "https://github.com/jnbooth/cxx-qt", rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905" }
semver = "1.0"

[dev-dependencies]
cxx-qt-lib-extras = { git = "https://github.com/jnbooth/cxx-qt", rev = "37ebd3be62fcca469c4ce98b004c4b7ca99f1905" }

[features]
default = []
fs = []
net = []
request = ["net"]
ssl = ["net"]
qt_core = ["fs"]
qt_network = ["net", "request", "ssl"]
full = ["qt_core", "qt_network"]
link_qt_object_files = ["cxx-qt-build/link_qt_object_files"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
expect_used = "warn"
inline_always = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
string_slice = "warn"
struct_excessive_bools = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
unwrap_used = "warn"
