[package]
name = "cxx-qt-io"
version = "0.3.2"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2024"
links = "cxx-qt-io"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cxx = "1.0.144"
cxx-qt = "0.8.0"
cxx-qt-lib = "0.8.0"

[build-dependencies]
cxx-qt-build = "0.8.0"
qt-build-utils = "0.8.0"
semver = "1.0"

[dev-dependencies]
cxx-qt-lib-extras = "0.8.0"

[features]
default = []
fs = []
net = []
request = ["net"]
ssl = ["net"]
qt_core = ["fs"]
qt_network = ["net", "request", "ssl"]
full = ["qt_core", "qt_network"]
link_qt_object_files = [
  "cxx-qt-build/link_qt_object_files",
  "cxx-qt-lib/link_qt_object_files",
]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
expect_used = "warn"
inline_always = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
string_slice = "warn"
struct_excessive_bools = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
unwrap_used = "warn"
