[package]
name = "cxx-qt-io-test-utils"
version = "0.1.0"
edition = "2021"
links = "cxx-qt-io-test-utils"

[dependencies]
cxx = "1.0.144"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt" }

[build-dependencies]
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
manual_assert = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
